Fix buy/book button click on mobile

--- a/assets/sass/site.scss
+++ b/assets/sass/site.scss
@@ -799,6 +799,20 @@ body {
     line-height: 1.2;
   }
 }
+
+.book-buy-overlay {
+  position: absolute;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  @include breakpoint(md) {
+    display: none;
+  }
+}
+
 .book-ride-btn {
   font-size: 24px;
   font-weight: bold;
